--- a/css/style.css
+++ b/css/style.css
@@ -5,18 +5,26 @@ body{
 
 header{
     text-align: left;
-    margin-top: 30px;
-    padding: 10% 20px 30% 20px;
-    background-color: blue;
+    margin-top: 60px;
+    padding: 15px 15% 15px 0;
 }
 
 #parallelogram {
-    width: 130px; 
+    width: 300px; 
     height: 75px;
-    background: pink;
+    background: blue;
     /* Skew */
-    -webkit-transform: skew(20deg);
-    -moz-transform: skew(20deg);
-    -o-transform: skew(20deg);
-    transform: skew(20deg);
+    -webkit-transform: skew(-50deg);
+    -moz-transform: skew(-50deg);
+    -o-transform: skew(-50deg);
+    transform: skew(-50deg);
  }
+
+ h1{
+    -webkit-transform: skew(0);
+    -moz-transform: skew(0);
+    -o-transform: skew(0);
+    transform: skew(0);
+    padding-left: 20%;
+    background-color: pink;
+}
