--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,13 @@ body{
 
 header{
     text-align: left;
-    margin-top: 60px;
+    margin-top: 50px;
     padding: 15px 15% 15px 0;
 }
 
 #parallelogram {
-    width: 300px; 
-    height: 75px;
+    width: 50%;
+    min-width: 200px;
     background: blue;
     /* Skew */
     -webkit-transform: skew(-50deg);
@@ -21,10 +21,10 @@ header{
  }
 
  h1{
-    -webkit-transform: skew(0);
-    -moz-transform: skew(0);
-    -o-transform: skew(0);
-    transform: skew(0);
-    padding-left: 20%;
+    -webkit-transform: skew(50deg);
+    -moz-transform: skew(50deg);
+    -o-transform: skew(50deg);
+    transform: skew(50deg);
+    padding-left: 0 0 0 20%;
     background-color: pink;
 }
