--- a/css/style.css
+++ b/css/style.css
@@ -1,32 +1,34 @@
 body{
-    background-color: black;
+    background-color: #303742;
     color: white;
 }
 
 header{
     text-align: left;
     margin-top: 50px;
-    padding: 5px 15% 5px 0;
+    padding: 10px 15% 10px 0;
+}
+
+h1{
+    font-size: 4em;
 }
 
 #head_para{
     width: 60%;
     min-width: 200px;
-    background: blue;
+    background: #004080;
+    box-shadow: 10px 10px black;
     /* Skew */
     -webkit-transform: skew(-50deg);
     -moz-transform: skew(-50deg);
     -o-transform: skew(-50deg);
-    transform: skew(-50deg);
-    transform: translate(-30px);
+    transform: skew(-50deg) translate(-50px);
  }
 
  #rev_head_para{
     -webkit-transform: skew(50deg);
     -moz-transform: skew(50deg);
     -o-transform: skew(50deg);
-    transform: skew(50deg);
+    transform: skew(50deg) translate(50px);
     margin: 0;
-    transform: translate(30px);
-    background-color: pink;
 }
