--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body{
 
 img{
     transform: scale(.20);
+    padding: 0;
 }
 
 header{
@@ -28,6 +29,11 @@ h1{
 
 .right{
     text-align: right;
+}
+
+.left{
+    text-align: left;
+    margin: 15px, 5px, 0px, 10px;
 }
 
 #head_para{
