--- a/css/style.css
+++ b/css/style.css
@@ -2,16 +2,12 @@
     --bg_color: #262626;
     --header_color: #004080;
     --shadow_color: black;
-    --img_scale: .4;
+    --img_scale: .45;
 }
 
 body{
     background-color: var(--bg_color);
     color: white;
-}
-
-img{
-    transform: scale(var(--img_scale));
 }
 
 header{
@@ -24,7 +20,7 @@ header{
 
 h1{
     font-size: 4em;
-    padding-left: 10%;
+    padding-left: 15%;
     overflow: hidden;
     white-space: nowrap;
     margin: 0;
@@ -32,21 +28,23 @@ h1{
 
 .right{
     text-align: right;
+    width: 50vw;
 }
 
 .left{
     text-align: left;
+    width: 50vw;
 }
 
 #picture{
-    /*transform: scale(var(--img_scale));*/
+    transform: scale(var(--img_scale));
     position: absolute;
-    top: -100px;
-    left: -40%;
+    top: -90px;
+    left: -270px;
 }
 
 #head_para{
-    width: 500px;
+    width: 60vw;
     background: var(--header_color);
     box-shadow: 12px 10px var(--shadow_color);
     /* Skew */
@@ -65,6 +63,7 @@ h1{
 }
 
 .subhead_pr{
+    width: 35vw;
     margin-left: 50%;
     padding: 3px, 0, 3px, 150px;
     background: var(--header_color);
