--- a/css/style.css
+++ b/css/style.css
@@ -29,12 +29,16 @@ h1{
     margin: 0;
 }
 
+.full{
+    width: 100vw;
+}
+
 .right{
-    text-align: right;
+    width: 50vw;
 }
 
 .left{
-    text-align: left;
+    width: 50vw;
 }
 
 #picture{
@@ -77,7 +81,7 @@ h1{
 }
 
 .rev_subhead_pr{
-    padding: 5px 0px 5px 15px;
+    padding: 5px 0px 5px 0;
     /*Reverse Skew*/
     -webkit-transform: skew(-50deg);
     -moz-transform: skew(-50deg);
@@ -86,9 +90,8 @@ h1{
 }
 
 .textbox{
-    position: absolute;
-    top: 30px;
+    margin-top: 30px;
     color: black;
     background-color: var(--tb_color);
-    box-shadow: 0px 0px 3px 10px black;
+    box-shadow: 0px 0px 15px 1px black;
 }
