--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
     --bg_color: #262626;
     --header_color: #004080;
     --shadow_color: black;
-    --tb_color: white;
+    --tb_color: #737373;
     --header_width: 675px;
 }
 
@@ -34,10 +34,12 @@ h1{
 }
 
 .right{
+    float: right;
     width: 50vw;
 }
 
 .left{
+    float: left;
     width: 50vw;
 }
 
@@ -90,8 +92,9 @@ h1{
 }
 
 .textbox{
-    margin-top: 30px;
+    margin: 30px 30px 0 30px;
+    padding: 10px;
     color: black;
     background-color: var(--tb_color);
-    box-shadow: 0px 0px 15px 1px black;
+    box-shadow: 0px 0px 15px 2px black;
 }
