--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
     --shadow_color: black;
     --tb_color: #737373;
     --header_width: 750px;
+    --column_outside_margin: 60px;
 }
 
 body{
@@ -34,16 +35,20 @@ h1{
 }
 
 .right{
+    --tb_left_margin: 30px;
+    --tb_right_margin: 0;
     float: right;
     width: 40vw;
     margin-left: 5vw;
-    margin-right: 5vw;
+    margin-right: var(--column_outside_margin);
 }
 
 .left{
+    --tb_left_margin: 0;
+    --tb_right_margin: 30px;
     float: left;
     width: 40vw;
-    margin-left: 5vw;
+    margin-left: var(--column_outside_margin);
     margin-right: 5vw;
 }
 
@@ -86,7 +91,7 @@ h1{
 }
 
 .rev_subhead_pr{
-    padding: 5px 0px 5px 60px;
+    padding: 5px 0px 5px 180px;
     /*Reverse Skew*/
     -webkit-transform: skew(-50deg);
     -moz-transform: skew(-50deg);
@@ -94,8 +99,30 @@ h1{
     transform: skew(-50deg);
 }
 
+.subhead_pl{
+    width: 50vw;
+    margin-top: 30px;
+    font-size: 2em;
+    background: var(--header_color);
+    box-shadow: 8px 8px var(--shadow_color);
+    /* Skew */
+    -webkit-transform: skew(-50deg);
+    -moz-transform: skew(-50deg);
+    -o-transform: skew(-50deg);
+    transform: skew(-50deg) translate(25px);
+}
+
+.rev_subhead_pr{
+    padding: 5px 180px 5px 0;
+    /*Reverse Skew*/
+    -webkit-transform: skew(50deg);
+    -moz-transform: skew(50deg);
+    -o-transform: skew(50deg);
+    transform: skew(50deg);
+}
+
 .textbox{
-    margin: 30px 40px 0 30px;
+    margin: 30px var(--tb_right_margin, 30px) 0 var(--tb_left_margin, 30px);
     padding: 10px;
     color: black;
     background-color: var(--tb_color);
