--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ h1{
     margin: 0;
 }
 
-.full{
+.wrapper{
     width: 100vw;
 }
 
@@ -142,9 +142,12 @@ h1{
 
 footer{
     background-color: var(--footer_color);
-    height: 200px;
     width: 100vw;
     text-align: center;
+    clear: both;
+    position: relative;
+    top: 50px;
+    font-size: 18px;
 }
 
 i{
@@ -161,5 +164,5 @@ a:visited{
 }
 
 #foot{
-    padding: 50px, 0, 50px 0;
+    padding: 80px;
 }
