--- a/css/style.css
+++ b/css/style.css
@@ -131,9 +131,9 @@ h1{
 .textbox{
     font-size: 18px;
     min-width: 200px;
-    text-align: left;
+    text-align: justify;
     margin: 30px var(--tb_right_margin, 30px) 0 var(--tb_left_margin, 30px);
-    padding: 10px;
+    padding: 15px;
     color: white;
     background-color: var(--tb_color);
     box-shadow: 0px 0px 15px 2px black;
