--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,8 @@ body{
     background-color: var(--bg_color);
     color: var(--text_color);
     margin: 0;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 header{
